--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -42,14 +42,13 @@ Back button.
    min-width: 0;
    min-height: 0;
    background-clip: border-box;
-   box-sizing: border-box;
+//   box-sizing: border-box; commented to fix misalignement problem in webkit
    border-width: 2px;
    border-style: solid;
    padding: 0;
    text-align: center;
    .border-radius(50%);
 
-/* Normal sizing. */
    width: 38px;
    height: 38px;
    font-size: 20px;
@@ -62,7 +61,8 @@ Back button.
    content: "\e05d";
    vertical-align: 24%;
 }
-.win-backbutton:disabled, .win-backbutton:disabled:active {
+.win-backbutton:disabled,
+.win-backbutton:disabled:active {
    background-clip: padding-box;
    visibility: hidden;
 }
