--- a/templates/pages/tiles-templates.mustache
+++ b/templates/pages/tiles-templates.mustache
@@ -26,7 +26,7 @@
 
                <div class="metro-section" id="section1">
 
-                  <a class="tile wide imagetext bg-color-gree" href="./square-tiles-templates.html">
+                  <a class="tile wide imagetext bg-color-green" href="./square-tiles-templates.html">
                      <div class="image-wrapper">
                         <img src="content/img/metro-tiles.jpg" />
                      </div>
