--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -6785,7 +6785,6 @@ Back button.
   -webkit-border-radius: 50%;
      -moz-border-radius: 50%;
           border-radius: 50%;
-  box-sizing: border-box;
   background-clip: border-box;
 }
 
@@ -7535,27 +7534,6 @@ Progress control. */
   background-color: #1c1c1c !important;
 }
 
-.image-wrapper span.icon {
-  width: 80px;
-  height: 80px;
-  font-size: 80px;
-  line-height: 80px;
-}
-
-.metro .tile.wide.imagetext .column-text,
-.metro .tile.wide.text .column-text {
-  display: block;
-  float: left;
-  width: 180px;
-}
-
-.scroll {
-  -webkit-transition: left 0.6s ease;
-     -moz-transition: left 0.6s ease;
-       -o-transition: left 0.6s ease;
-          transition: left 0.6s ease;
-}
-
 .metro {
   overflow: hidden;
 }
@@ -7578,9 +7556,12 @@ Progress control. */
   text-transform: lowercase;
 }
 
-.metro .metro-sections .metro-section.tile-span-8 {
-  width: 1120px;
-  margin-left: 0;
+.metro .metro-sections .metro-section {
+  position: relative;
+  float: left;
+  width: auto;
+  height: auto;
+  margin-right: 75px;
 }
 
 .metro .metro-sections .metro-section.tile-span-1 {
@@ -7603,14 +7584,6 @@ Progress control. */
   margin-left: 0;
 }
 
-.metro .metro-sections .metro-section {
-  position: relative;
-  float: left;
-  width: auto;
-  height: auto;
-  margin-right: 75px;
-}
-
 .metro .metro-sections .metro-section.tile-span-5 {
   width: 640px;
   margin-left: 0;
@@ -7623,6 +7596,11 @@ Progress control. */
 
 .metro .metro-sections .metro-section.tile-span-7 {
   width: 960px;
+  margin-left: 0;
+}
+
+.metro .metro-sections .metro-section.tile-span-8 {
+  width: 1120px;
   margin-left: 0;
 }
 
@@ -7641,12 +7619,28 @@ Progress control. */
   background-color: #2C83EF;
 }
 
-.metro .tile .app-count {
+.metro .tile .app-label,
+.metro .tile .label {
+  position: absolute;
+  bottom: 5px;
+  left: 20px;
+  font-size: 12px;
+}
+
+.metro .tile .app-count,
+.metro .tile .count {
   position: absolute;
   right: 20px;
   bottom: 5px;
   font-size: 14px;
   font-weight: bold;
+}
+
+.metro .tile .image-wrapper span.icon {
+  width: 80px;
+  height: 80px;
+  font-size: 80px;
+  line-height: 80px;
 }
 
 .metro .tile .text-header3 {
@@ -7731,13 +7725,6 @@ Progress control. */
   font-weight: 300;
   line-height: 18px;
   text-align: left;
-}
-
-.metro .tile .app-label {
-  position: absolute;
-  bottom: 5px;
-  left: 20px;
-  font-size: 12px;
 }
 
 .metro .tile .text {
@@ -7840,6 +7827,12 @@ Progress control. */
   text-align: right;
 }
 
+.metro .tile.wide.text .column-text {
+  display: block;
+  float: left;
+  width: 180px;
+}
+
 .metro .tile.wide.imagetext {
   width: 270px;
   height: 110px;
@@ -7857,6 +7850,12 @@ Progress control. */
 .metro .tile.wide.imagetext .image-wrapper img {
   max-width: 80px;
   max-height: 80px;
+}
+
+.metro .tile.wide.imagetext .column-text {
+  display: block;
+  float: left;
+  width: 180px;
 }
 
 .metro .tile.wide.imagetext .textover-wrapper {
