--- a/less/bootmetro/modals-popovers.less
+++ b/less/bootmetro/modals-popovers.less
@@ -15,7 +15,7 @@
 .modal-header {
    border: 0;
 }
-.modal.message,.modal.warning {
+.modal.message, .modal.warning {
    left: 0;
    margin: 0;
    padding: 0 20%;
@@ -27,7 +27,7 @@
    padding: 0 1%;
    width: 100%;
    .box-sizing(border-box);
-   background-color: #0072BC !important;
+   background-color: @light-blu2 !important; // #0072BC
    color: #FFF;
    .modal-body {
       display: inline-block;
