--- a/less/bootmetro/wizard.less
+++ b/less/bootmetro/wizard.less
@@ -10,7 +10,7 @@
    background-color: #FFF;
 }
 #wizard-steps-container {
-   background-color: #0072BC !important;
+   background-color: @light-blu2 !important; // #0072BC
    color: #FFF;
    h2 {
       margin-bottom: 30px;
