--- a/templates/partials/header-menu.mustache
+++ b/templates/partials/header-menu.mustache
@@ -6,6 +6,7 @@
    <li><a href="./table.html">Demo Table</a></li>
    <li><a href="./wizard.html">Wizard</a></li>
    <li><a href="./icons.html">Icons</a></li>
+   <li><a href="./metro-components.html">Metro Components</a></li>
    <li class="divider"></li>
    <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
    <li><a href="./base-css.html">Bootstrap Base CSS</a></li>
