--- a/templates/partials/logged-user.mustache
+++ b/templates/partials/logged-user.mustache
@@ -9,7 +9,7 @@
          <h4>LastName</h4>
       </div>
       <div class="top-info-block">
-         <b class="icon-user"></b>
+         <b class="icon-user-2"></b>
       </div>
    </a>
 </div>
