--- a/less/variables.less
+++ b/less/variables.less
@@ -230,20 +230,20 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #c09853;
-@warningBackground:       #fcf8e3;
+@warningText:             #fcf8e3;
+@warningBackground:       #c09853;
 @warningBorder:           darken(spin(@warningBackground, -10), 3%);
 
-@errorText:               #b94a48;
-@errorBackground:         #f2dede;
+@errorText:               #FFF;
+@errorBackground:         #BC1C48;
 @errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
-@successText:             #468847;
-@successBackground:       #dff0d8;
+@successText:             #FFF;
+@successBackground:       #01A31C;
 @successBorder:           darken(spin(@successBackground, -10), 5%);
 
-@infoText:                #3a87ad;
-@infoBackground:          #d9edf7;
+@infoText:                #FFF;
+@infoBackground:          #2D89F0;
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
 
