--- a/templates/pages/components.mustache
+++ b/templates/pages/components.mustache
@@ -2100,7 +2100,8 @@
           <div class="page-header">
             <h1>{{_i}}Progress bars{{/i}} <small>{{_i}}For loading, redirecting, or action status{{/i}}</small></h1>
           </div>
-           <p class="label label-info">For Metro style progress bars see the <a href="./metro-components.html">Metro Components</a> page.</p>
+
+           <p class="label label-warning">For Metro style progress bars see the <a href="./metro-components.html">Metro Components</a> page.</p>
 
           <h2>{{_i}}Examples and markup{{/i}}</h2>
 
