--- a/templates/pages/javascript.mustache
+++ b/templates/pages/javascript.mustache
@@ -158,89 +158,9 @@ $('#myModal').on('show', function (e) {
 &lt;/div&gt;
 </pre>
 
-          <h3>{{_i}}Live demo{{/i}}</h3>
-          <p>{{_i}}Toggle a modal via JavaScript by clicking the button below. It will slide down and fade in from the top of the page.{{/i}}</p>
-          <p>{{_i}}To show a Metro style message dialog, add a class <code>message</code>.{{/i}}</p>
-          <p>{{_i}}To show a Metro style warning or error dialog, add a class <code>warning</code>.{{/i}}</p>
-          <!-- sample modal content -->
-          <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-              <h3 id="myModalLabel">{{_i}}Modal Heading{{/i}}</h3>
-            </div>
-            <div class="modal-body">
-              <h4>{{_i}}Text in a modal{{/i}}</h4>
-              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem.</p>
-
-              <h4>{{_i}}Popover in a modal{{/i}}</h4>
-              <p>{{_i}}This <a href="#" role="button" class="btn popover-test" title="A Title" data-content="And here's some amazing content. It's very engaging. right?">button</a> should trigger a popover on click.{{/i}}</p>
-
-              <h4>{{_i}}Tooltips in a modal{{/i}}</h4>
-              <p>{{_i}}<a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> should have tooltips on hover.{{/i}}</p>
-
-              <hr>
-
-              <h4>{{_i}}Overflowing text to show optional scrollbar{{/i}}</h4>
-              <p>{{_i}}We set a fixed <code>max-height</code> on the <code>.modal-body</code>. Watch it overflow with all this extra lorem ipsum text we've included.{{/i}}</p>
-              <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-              <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-              <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-            <div class="modal-footer">
-              <button class="btn" data-dismiss="modal">{{_i}}Close{{/i}}</button>
-              <button class="btn btn-primary">{{_i}}Save changes{{/i}}</button>
-            </div>
-          </div>
-          <div id="myModal2" class="modal message hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                <h3>{{_i}}Modal Heading{{/i}}</h3>
-             </div>
-             <div class="modal-body">
-                <h4>{{_i}}Text in a modal{{/i}}</h4>
-                <p>Do you want to turn on location services so Microsoft can use your location ?</p>
-             </div>
-             <div class="modal-footer">
-                <button class="btn" data-dismiss="modal">{{_i}}Close{{/i}}</button>
-                <button class="btn btn-primary">{{_i}}Save changes{{/i}}</button>
-             </div>
-          </div>
-          <div id="myModal3" class="modal warning bg-color-blu hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-             <div class="modal-body">
-                <p>The new product cannot be saved due to an error. A log message has been emailed to you.</p>
-             </div>
-             <div class="modal-footer">
-                <button class="btn btn-large" data-dismiss="modal">{{_i}}Close{{/i}}</button>
-             </div>
-          </div>
-          <div class="bs-docs-example" style="padding-bottom: 24px;">
-             <a data-toggle="modal" href="#myModal" class="btn btn-primary">{{_i}}Show Flyout (classic modal){{/i}}</a>
-             <a data-toggle="modal" href="#myModal2" class="btn btn-success">{{_i}}Show Metro Message{{/i}}</a>
-             <a data-toggle="modal" href="#myModal3" class="btn btn-warning">{{_i}}Show Error/Warning{{/i}}</a>
-          </div>{{! /example }}
-
-<pre class="prettyprint linenums">
-&lt!-- Button to trigger modal --&gt;
-&lt;a href="#myModal" role="button" class="btn" data-toggle="modal"&gt;{{_i}}Launch demo modal{{/i}}&lt;/a&gt;
-
-&lt!-- Modal --&gt;
-&lt;div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"&gt;
-  &lt;div class="modal-header"&gt;
-    &lt;button type="button" class="close" data-dismiss="modal" aria-hidden="true"&gt;&lt;/button&gt;
-    &lt;h3 id="myModalLabel"&gt;Modal header&lt;/h3&gt;
-  &lt;/div&gt;
-  &lt;div class="modal-body"&gt;
-    &lt;p&gt;{{_i}}One fine body&hellip;{{/i}}&lt;/p&gt;
-  &lt;/div&gt;
-  &lt;div class="modal-footer"&gt;
-    &lt;button class="btn" data-dismiss="modal" aria-hidden="true"&gt;{{_i}}Close{{/i}}&lt;/button&gt;
-    &lt;button class="btn btn-primary"&gt;{{_i}}Save changes{{/i}}&lt;/button&gt;
-  &lt;/div&gt;
-&lt;/div&gt;
-</pre>
+         <p>
+            <span class="label label-warning">To see a live demo go to the <a href="./metro-components.html#modals">Metro Components</a> page where you'll see different modals in Metro style.</span>
+         </p>
 
 
           <hr class="bs-docs-separator">
