Integrated in less files the icomoon.css and removed it form layout.

--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -27,7 +27,9 @@
 @import "../tables.less";
 
 // Components: common
-@import "../sprites.less";
+//@import "../sprites.less";
+@import "icomoon.less"; // use icomoon icons
+
 @import "../dropdowns.less";
 @import "wells.less";
 @import "../component-animations.less";
