--- a/less/bootmetro/variables.less
+++ b/less/bootmetro/variables.less
@@ -167,8 +167,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "content/img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "content/img/glyphicons-halflings-white.png";
+//@iconSpritePath:          "content/img/glyphicons-halflings.png";
+//@iconWhiteSpritePath:     "content/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
